Fix broken layout with md size screen

--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -32,7 +32,7 @@ $side-menu-width: 18rem;
   }
 }
 
-@include media-breakpoint-down(sm) {
+@include media-breakpoint-down(md) {
   .layout .side-menu {
     display: none;
   }
